<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:gravity="center"
    android:layout_margin="5dp"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/isThisYourVIN"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/is_this_your_vin"
        android:textSize="24sp"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:layout_margin="8dp"/>

    <TextView
        android:id="@+id/tvDialogVIN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_margin="8dp"
        android:textColor="@color/colorAccent"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp">

        <Button
            android:id="@+id/yesBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            android:layout_margin="8dp"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/noBtn"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:layout_margin="8dp"
            android:textSize="16sp"/>

    </LinearLayout>







</LinearLayout>